--- a/Site Robbie Lens/index.html
+++ b/Site Robbie Lens/index.html
@@ -14,6 +14,7 @@
 
 <body>
     <header>
+        <div></div>
         <nav>
             <a href="index.html" class="lien-icone">
                 <img src="images/logo-2.png" alt="Logo Robbie Lens" title="Ceci est le logo de Robbie Lens">
